# aps-qt

./: .gitignore  CMakeLists.txt  README.md  apsScreen.ui  architecture.odt  generateUi.sh  info.md  startScreen.ui  tasks.md  ТЗ.docx
src/MainWindow/: BufferGui.cpp  BufferGui.hpp  DevicesGui.hpp  EventsGui.cpp  EventsGui.hpp  MainWindow.cpp  MainWindow.hpp  StartupDialog.cpp  StartupDialog.hpp  UiMainWindow.hpp  UiStartupDialog.hpp  generateUi.sh  main.cpp  mainWindow.ui  startupDialog.ui
src/MainWindow/Ecosystem/: Buffer.cpp  Buffer.hpp  DeviceHolder.cpp  DeviceHolder.hpp  Event.cpp  Event.hpp  EventHolder.cpp  EventHolder.hpp  Order.cpp  Order.hpp  Statistics.cpp  Statistics.hpp
src/MainWindow/GUI/: BufferGui.cpp  BufferGui.hpp  ClientsGui.cpp  ClientsGui.hpp  DevicesGui.cpp  DevicesGui.hpp  EventsGui.hpp
